# lTerm2

./: README.md  current_work.md
core/: README.md  meson.build
core/include/: iterm_core.h  iterm_csi_param.h  iterm_parser.h  iterm_parser_context.h  iterm_pty.h  iterm_reader.h  iterm_screen.h  iterm_screen_char.h  iterm_state_machine.h  iterm_token.h  iterm_token_types.h  lterm_core.h  lterm_csi_param.h  lterm_parser.h  lterm_parser_context.h  lterm_pty.h  lterm_reader.h  lterm_screen.h  lterm_screen_char.h  lterm_state_machine.h  lterm_token.h  lterm_token_types.h  vt100_ansi_parser.h  vt100_control_parser.h  vt100_csi_parser.h  vt100_dcs_parser.h  vt100_osc_parser.h  vt100_string_parser.h
core/src/: iterm_pty.c  iterm_screen.c  lterm_pty.c  lterm_screen.c  meson.build  stub_terminal.c
core/src/parser/: iterm_parser.c  iterm_reader.c  iterm_state_machine.c  iterm_token.c  lterm_parser.c  lterm_reader.c  lterm_state_machine.c  lterm_token.c  vt100_ansi_parser.c  vt100_control_parser.c  vt100_csi_parser.c  vt100_dcs_parser.c  vt100_osc_parser.c  vt100_string_parser.c
core/tests/: meson.build  parser_test.c  state_machine_test.c
docs/: GTK_PORT_PLAN.md  GTK_SHELL_DESIGN.md  TERMINAL_CORE_SCOPE.md  VT100_PARSER_MIGRATION.md
gtk-shell/: README.md  meson.build
gtk-shell/src/: app_window.c  app_window.h  core_bridge.c  core_bridge.h  iterm_app.c  iterm_app.h  lterm_app.c  lterm_app.h  main.c  terminal_view.c  terminal_view.h
